namespace TicketingSystem.Domain.Enums;

/// <summary>
/// Typ rozwiązania zgłoszenia.
/// </summary>
public enum ResolutionType
{
    ROZWIAZANE,
    OBEJSCIE_PROBLEMU,
    NIE_MOZNA_ODTWORZYC
}
